--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   
  <div class="valueproposition">
-  <p> <b>At ecolie, </b> we find and connect you to the best online free tutor videos.</p>
+  <!--<p> <b>At ecolie, </b> we find and connect you to the best online free tutor videos.</p>-->
  </div>
 <div class="block">
     <div class="subjects">
