--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="headings">  
      
   
-        <video src="Video/pexels-artem-podrez-5752737.mp4" alt="" width="400px"  autoplay loop muted></video>
+        <video src="Video/Chemistry.mp4" alt="" width="400px"  autoplay loop muted></video>
       <h3>Chemistry</h3>
       <p>Learn Elements, Atoms, Electrons, Protons, Molecular Mass, Mass Number, Differents types of bonds, Chemical reactions, Moles, Volume, concentration, Pressure, etc.<br>
         <span>Start learning by clicking Topics below.</span></p></p>
