--- a/algebra.html
+++ b/algebra.html
@@ -362,8 +362,8 @@
     //input answer
   
     //what is the right answer
-    let answer1 =  -0.5;
-    let answer2 = 0;
+    let answer1 =  '-0.5';
+    let answer2 = '0';
     //let chances
     let chances = 3;
     //test button
