--- a/algebra.html
+++ b/algebra.html
@@ -395,7 +395,7 @@ else if (input1  !== answer1 || input2  !== answer2){
             document.querySelector('.chances').textContent = chances;
     }
     else{
-        displayMessage('The correct answer is +0.5 and 0');
+        displayMessage('The correct answer is -0.5 and 0');
         document.querySelector('.chances').textContent = 0;
         document.querySelector('.chances').style.backgroundColor = 'red';
         question1.style.backgroundColor = 'red';
